# custom-sopami-roles

./: README.md  app.py  extensions.py  gunicorn_config.py  pyproject.toml  sopami-flask.db
apps/authentication/controllers/: auth_controller.py  permission_controller.py  role_controller.py  user_controller.py
apps/authentication/models/: permission_model.py  role_model.py  user_model.py
apps/post/controllers/: post_controller.py
apps/post/models/: post_model.py
migrations/versions/: b1965769df56_add_description_to_permission_model.py
utils/: exceptions.py
